--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,7 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: nowrap;
   width: 100%;
   flex-basis: 45px;
@@ -10,9 +10,163 @@ header {
   line-height: 51.75px;
   padding-right: 16px;
   border-bottom: 1px solid rgba(0,0,0, 0.2);
+  height: 45px;
 }
 
-header img {
+header img.logo {
   width: 116px;
   height: 21px;
+}
+
+
+.pz-nav__hamburger-helper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  height: 45px;
+  width: 45px;
+}
+
+.pz-nav__hamburger-helper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  z-index: 1;
+}
+
+.pz-nav__hamburger {
+  padding: 0;
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity,filter;
+  transition-duration: .15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: rgba(0,0,0,0);
+  border: 0;
+  margin: 0;
+  overflow: visible;
+}
+
+
+.pz-nav__hamburger-box {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  margin: 0 auto;
+  position: relative;
+}
+
+.pz-nav__hamburger-squeeze .pz-nav__hamburger-inner {
+  transition-duration: .1s;
+  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.pz-nav__hamburger-inner, .pz-nav__hamburger-inner::before, .pz-nav__hamburger-inner::after {
+  width: 20px;
+  height: 3px;
+  background-color: #000;
+  border-radius: 4px;
+  position: absolute;
+  transition-property: transform;
+  transition-duration: .15s;
+  transition-timing-function: ease;
+}
+
+.pz-nav__hamburger-inner {
+  display: block;
+  top: 50%;
+  margin-top: -1.5px;
+}
+
+.pz-nav__hamburger-squeeze .pz-nav__hamburger-inner::before {
+  transition: top .1s .14s ease,opacity .1s ease;
+}
+
+.pz-nav__hamburger-inner::before {
+  top: -7px;
+}
+
+.pz-nav__hamburger-inner::before, .pz-nav__hamburger-inner::after {
+  content: "";
+  display: block;
+}
+
+.pz-nav__hamburger-squeeze .pz-nav__hamburger-inner::after {
+  transition: bottom .1s .14s ease,transform .1s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.pz-nav__hamburger-inner::after {
+  bottom: -7px;
+}
+
+.empty-space-45 {
+  width: 45px;
+  height: 45px;
+}
+
+.timer {
+  display: flex;
+}
+
+.timer-button {
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 16px;
+  font-family: nyt-franklin, Arial;
+  width: 100px;
+}
+
+.timer-button-icon {
+  opacity: .3;
+  transition: opacity .3s;
+  content: url(./assets/timer-pause.svg);
+  width: 13px;
+  height: 15px;
+}
+
+.button-icon {
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+  justify-content: center;
+}
+
+.information {
+  content: url(./assets/information-i.svg);
+}
+
+.lifesaver {
+  content: url(./assets/lifesaver-blue.svg);
+}
+
+.settings {
+  content: url(./assets/settings-gear.svg);
+}
+
+header button {
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity,filter;
+  transition-duration: .15s;
+  transition-timing-function: linear;
+  font: inherit;
+  background-color: rgba(0,0,0,0);
+}
+
+
+.other-buttons {
+  display: flex;
 }
