--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 #root {
-  height: 100vh;
-  overflow: hidden;
+  overflow: hidden;;
+  
 }
 
 .app {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100dvh;
+  overflow: hidden;
 }
 
 .main {
   flex: 1;
+  height: 100%;
 }
