--- a/src/GamePage.css
+++ b/src/GamePage.css
@@ -1,15 +1,19 @@
 .game-page {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: 100%;
 }
 
 .crossword-section {
-  padding: 10px;
-  flex-basis: 66%;
+  padding: 10px 10%;
+  flex: 1 1 300px;
   overflow: hidden;
 }
 
 .controls-section {
-  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
