--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  font-size: 16px;
+  color: #000;
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424; */
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,6 +16,19 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+}
+
+body {
+  overflow: hidden;
+  height: 100%; /* Fallback */
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
+  height: stretch; /* Latest specification */
+}
 a {
   /* font-weight: 500;
   color: #646cff;
@@ -38,36 +53,8 @@ h1 {
 }
 
 button {
-  /* border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s; */
+  color: black;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  /* outline: 4px auto -webkit-focus-ring-color; */
-}
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
 
 .container {
   display: flex;
@@ -86,4 +73,13 @@ button:focus-visible {
 @font-face {
   font-family: 'nyt-franklin';
   src: url(./assets/LibreFranklin-VariableFont_wght.ttf);
+}
+
+:root {
+  --viewport-height: 100%;
+  height: 100vh;
+  
+  @supports (height: var(--)) {
+    height: var(--viewport-height);
+  }
 }
